--- a/schoolnotes/diffeq/diffeq.tex
+++ b/schoolnotes/diffeq/diffeq.tex
@@ -31,6 +31,7 @@
 \setcounter{section}{1}
 
 \section{First-Order Differential Equations}
+\subsection{Helpful terms and theorems}
 \begin{defi}[Order]
 	The order of a differential equation is the order of the highest dericatice appearing in the equation.
 \end{defi}
@@ -56,7 +57,7 @@
 	\begin{equation*}
 		x'=f(t,x)=0.
 	\end{equation*}
-	The set of points \(t,x\) where \(f(t,x)=k\) for some constant \(k\) are called isoclines.
+	The set of points \(t,x\) where \(f(t,x)=k\) for some constant \(k\) are called isoclines. When we say set of points, we mean the non-empty pre image \(\{k\}\).
 \end{defi}
 \begin{thm}[Fundamental theorem of calculus]
 	\,
@@ -64,10 +65,22 @@
 		\frac{d}{dt}\int_{a}^{t}g(s)ds=g(t)
 	\end{equation*}
 \end{thm}
+\begin{thm}[Existence and uniqueness]
+	Assume the function \(f(t,x)\) and its partial derivative \(f_x(t,x)\) are continuous in a rectangle \(a<t<b, c<x<d\). Then, for any value \(t_0\) in \(a<t<b\) and \(x_0\) in \(c<x<d\), the initial value problem
+	\begin{IEEEeqnarray*}{c}
+		x'=f(t,x)\\
+		x(t_0)=x_0
+	\end{IEEEeqnarray*}
+	has a unique solution valid on some open interval \(a<\alpha<t<\beta<b\) containing \(t_0\).
+\end{thm}
+\begin{defi}[Integral curve]
+	After simplifying a differential equation so that it is in terms of \(x\) and \(t\), we obtain a one-parameter family of curves \(\phi(t,x)=C\) in the \(t,x\) plane, consisting of the pre-images of \(\phi(t,x)\) under \{C\}. These so-called integral curves define implicit solutions of the equation. Explicit solutions are the curves for particular values of \(C\).
+\end{defi}
+\subsection{Seperable equations}
 \begin{defi}[Seperable equation]
 	A differential equation of the form
 	\begin{equation*}
-		x'=f(x)g(t)
+		\frac{dx}{dt}=f(x)g(t)
 	\end{equation*}
 	is called a seperable equation. We can obtain \(x\) through the following procedure:
 	\begin{IEEEeqnarray*}{rCl}
@@ -79,13 +92,7 @@
 	\begin{equation*}
 		e^{\int g(t)dt}=f(x)+c.
 	\end{equation*}
-\end{defi}
-\begin{defi}[Linear equation]
-	A differential equation of the form
-	\begin{equation*}
-		x'+p(t)x=q(t)
-	\end{equation*}
-	is called a first-order linear equation\footnote{This is also called the normal form of a first-order linear equation.}. If a first-order equation can not be put into this form, the equation is called nonlinear.
+	Equations where \(x'\) is related to a non-identity function of \(x\) can not utilize the quick natural log method in equation \ref{nlogmethod}.
 \end{defi}
 \begin{defi}[Homogeneous equation]
 	A first-order linear differential equation is called homogeneous\footnote{A homogenous equation is seperable.} if it is of the form
@@ -93,20 +100,9 @@
 		x'+p(t)x=0.
 	\end{equation*}
 The solution is
-\begin{equation*}
-	Ce^{-\int p(t)dt}.
-\end{equation*}
-\end{defi}
-\begin{defi}[Integrating factor]
-	A function \(\mu(t)\) exists such that
-	\begin{equation*}
-		\mu(t)(x'+p(t)x)=(\mu(t)x)'.
-	\end{equation*}
-	The function \(\mu(t)\) is called an integrating factor and is given by
-	\begin{equation*}
-		\mu(t)=e^{\int p(t)dt}
-	\end{equation*}
-	This can be used to solve linear equations by multiplying both sides by the integrating factor.
+\begin{equation}
+	x=Ce^{-\int p(t)dt}.\label{nlogmethod}
+\end{equation}
 \end{defi}
 \begin{defi}[Autonomous equation]
 	An autonomous differential equation is a differential equation with no explicit time dependence, i.e.
@@ -125,22 +121,79 @@ The solution is
 	\end{equation*}
 	If \(f'(x^*)<0\), then \(x^*\) is stable. If \(f'(x^*)>0\), then \(x^*\) is unstable. If \(f'(x^*)=0\) then higher derivatives must be analysed to find information about stability.
 \end{thm}
-\begin{thm}[Existence and uniqueness]
-	Assume the function \(f(t,x)\) and its partial derivative \(f_x(t,x)\) are continuous in a rectangle \(a<t<b, c<x<d\). Then, for any value \(t_0\) in \(a<t<b\) and \(x_0\) in \(c<x<d\), the initial value problem
-	\begin{IEEEeqnarray*}{c}
-		x'=f(t,x)\\
-		x(t_0)=x_0
-	\end{IEEEeqnarray*}
-	has a unique solution valid on some open interval \(a<\alpha<t<\beta<b\) containing \(t_0\).
-\end{thm}
-\section{Second-order linear equations}
 \begin{rema}
-	Chapter two in the book deals with second-order differential equations of the form
-	\begin{equation}
-		\label{rema:eqn}
-		ax''+bx'+cx=f(t).
-	\end{equation}
+	As a recap, both homogenous and autonomous equations are seperable, but seperable equations are not necessarily either of these. Their forms are
+	\begin{enumerate}
+		\item \(x'+f(x)g(t)=0\)\qquad (seperable)
+		\item \(x'+p(t)x=0\)\qquad (homogenous)
+		\item \(x'+f(x)=0\)\qquad (autonomous)
+	\end{enumerate}
+	It should also be noted that seperable equations are not necessarily linear.
 \end{rema}
+\begin{rema}
+	A technique for solving seperable IVP's is to unilize definite integrals during the integration step. This involves taking the definite integral of \(f(x)\) starting at \(x_0\), and the definite integral of \(g(t)\) starting at \(t_0\), i.e.
+	\begin{equation*}
+		\int_{x_0}^x\frac{1}{f(y)}dy=\int_{t_0}^t g(s)ds.
+	\end{equation*}
+	This works by adjusting the constant of integration of both sides so that they are equal under the initial condition \(x(t_0)=x_0\).
+\end{rema}
+\subsection{Non-seperable equations}
+\begin{defi}[Linear equation]
+	A differential equation of the form
+	\begin{equation}
+		\label{d1normal}
+		x'+p(t)x=q(t)
+	\end{equation}
+	is called a first-order linear equation\footnote{This is also called the normal form of a first-order linear equation.}. If a first-order equation can not be put into this form, the equation is called nonlinear.
+\end{defi}
+\begin{defi}[Forcing term]
+	The term \(q(t)\) in equation \ref{d1normal} is called the forcing term, or source term.
+\end{defi}
+\begin{defi}[Integrating factor]
+	A function \(\mu(t)\) exists such that
+	\begin{equation*}
+		\mu(t)(x'+p(t)x)=(\mu(t)x)'.
+	\end{equation*}
+	The function \(\mu(t)\) is called an integrating factor and is given by
+	\begin{equation*}
+		\mu(t)=e^{\int p(t)dt}
+	\end{equation*}
+	This can be used to solve linear equations by multiplying both sides by the integrating factor.
+\end{defi}
+\begin{thm}[Structure]
+	Consider the normal form of a first order linear equation
+	\begin{equation*}
+		x'+p(t)x=q(t).
+	\end{equation*}
+	The general solution \(x(t)\) is the sum of the general solution to the homogeneous equation plus any solution to the nonhomogeneous equation. i.e.
+	\begin{equation*}
+		x(t)=x_h(t)+x_p(t),
+	\end{equation*}
+	where
+	\begin{equation*}
+		x_h(t)=Ce^{-P(t)},\quad x_p(t)=e^{-P(t)}\int q(t)e^{P(t)}dt.
+	\end{equation*}
+	Therefore, the solution consists of two parts, the transient (homogenous) solution \(x_h(t)\) and the steady-state (particular) solution \(x_p(t)\).
+\end{thm}
+\begin{defi}[Bifurcation]
+	Bifurcation is said to occur when there is a significant change in the character of the equilibrium solutions, as the bifurcation parameter \(h\) changes. Such a parameter could be the harvesting rate of a fish population in an environment with a set carrying capacity. Bifurcation diagrams plot the equilibium solutions \(x^{*}\) on the \(y\)-axis vs the bifurcation parameter \(h\) on the \(x\)-axis.
+\end{defi}
+\section{Second-order linear equations}
+\begin{defi}[Linear equation]
+	The normal form of a second-order linear differential equation is
+	\begin{equation*}
+		ax''+bx'+cx=f(t).
+	\end{equation*}
+	In some equations \(b\) is the damping coefficient, and \(c\) the spring constant.
+\end{defi}
+\subsection{Homogeneous equations}
+\begin{defi}[Homogeneous linear equation with constant coefficients]
+	\,
+	\begin{equation}
+		\label{homogen2}
+		ax''+bx'+cx=0.
+	\end{equation}
+\end{defi}
 \begin{defi}[Hooke's law]
 	Let \(x\) be displacement from equilibrium and \(k\) be the spring constant. Then
 	\begin{equation*}
@@ -168,7 +221,7 @@ The solution is
 	\end{equation*}
 \end{defi}
 \begin{rema}
-	The damped spring-mass equation has the form\footnote{An equation of this form is called a homogenour linear equation with constant coefficients.}
+	The damped spring-mass equation has the form\footnote{An equation of this form is called a homogenous linear equation with constant coefficients.}
 	\begin{equation*}
 		ax''+bx'+cx=0.
 	\end{equation*}
@@ -178,7 +231,7 @@ The solution is
 	\end{equation*}
 \end{rema}
 \begin{defi}[Characteristic equation]
-	To solve equation \ref{rema:eqn}, first note that \(x(t)=e^{\lambda t}\) for some constant \(\lambda\). Substituting \(e^{\lambda t}\), we can solve for \(\lambda\) with the characteristic equation\footnote{The roots of this equation are called eigenvalues.}
+	To solve equation \ref{homogen2}, first note that \(x(t)=e^{\lambda t}\) for some constant \(\lambda\). Substituting \(e^{\lambda t}\), we can solve for \(\lambda\) with the characteristic equation\footnote{The roots of this equation are called eigenvalues.}
 	\begin{equation*}
 		a\lambda^2+b\lambda+c=0.
 	\end{equation*}
@@ -217,4 +270,119 @@ If \(x(t)=g(t)+ih(t)\) is a complex-valued solution of differential equation \re
 	\end{equation*}
 	If \(\alpha<0\), these solutions represent decaying oscillations, and if \(\alpha>0\) then these solutions represent growing oscillations. If \(\alpha=0\) then the solutions are purely oscillatory with frequency \(\beta\) and period \(2\pi/\beta\).
 \end{rema}
+\begin{defi}[Phase-amplitude form]
+	The general solution
+	\begin{equation*}
+		x(t)=c_1\text{cos}\,\beta t+c_2\text{sin}\,\beta t
+	\end{equation*}
+	can be written as
+	\begin{equation*}
+		A\text{cos}\,(\beta t-\rho).
+	\end{equation*}
+	The constants \(A\) and \(\rho\) are related to \(c_1\) and \(c_2\) by
+	\begin{equation*}
+		A=\sqrt{c_1^2+c_2^2},\qquad\rho=\text{arctan}\,\frac{c_2}{c_1}.
+	\end{equation*}
+	\(A\) is the amplitude and \(\rho\) is the phase. If \(c_1<0\), then we add \(\pi\) to \(\rho\).
+\end{defi}
+\begin{defi}[Damping]
+	Suppose the motion of a mass-spring system is governed by the equation
+	\begin{equation*}
+		mx''+\gamma x'+kx=0,\qquad m,\gamma,k>0.
+	\end{equation*}
+	If \(\gamma^2-4mk>0\), the eigenvalues are real, distinct, negative, and the sytem is overdamped. If \(\gamma^2=4mk\), the eigenvalues are real, equal, and negative, and the system is critically damped. If \(\gamma^2-4mk<0\), the eigenvalues are complex, have negative real part, and the system is underdamped.\footnote{If the system is not underdamped, we say it decays without oscillations. If it is underdamped, we say it oscillates with decay.}
+\end{defi}
+\begin{defi}[Envelope]
+	An envelope of a planar family of curves is a curve that is tangent to each member of the family at some point
+\end{defi}
+\subsection{Nonhomogeneous equations}
+\begin{defi}[Nonhomogeneous equation]
+	A nonhomogeneous equation is of the form
+	\begin{equation*}
+		\label{nonhomo2}
+		ax''+bx'+cx=f(t).
+	\end{equation*}
+	The term \(f(t)\) is called the forcing term.
+\end{defi}
+\begin{thm}[Structure theorem]
+	The general solution of the nonhomogeneous equation \ref{nonhomo2} is given by the sum of the general solution to the homogeneous equation \ref{homogen2} and any specific solution to the nonhomogeneous equation. In other words
+	\begin{equation*}
+		x(t)=c_1x_1(t)+c_2x_1(t)+x_p(t).
+	\end{equation*}
+\end{thm}
+\begin{defi}[Undetermined coefficients]
+	Guess the form of \(x_p(t)\) from the form of the source term \(f(t)\). Some guesses include
+	\bigbreak
+	\begin{tabular}{l|l}
+		Form of source function \(f(t)\)&Trial form of particular solution \(x_p(t)\)\\
+		\hline
+		\(\alpha\)&\(A\)\\
+		\(\alpha^{\beta t}\)&\(Ae^{\beta t}\)\\
+		polynomial of degree \(n\)&\(A_nt^n+A_{n-1}t^{n-1}+\ldots+A_1t+A_0\)\\
+		\(\alpha\text{sin}\,\omega t;\;\alpha\text{cos}\,\omega t\)&\(A\text{sin}\,\omega t+B\text{cos}\,\omega t\)\\
+		\(\alpha e^{rt}\text{sin}\,\omega t;\;\alpha e^{rt}\text{cos}\,\omega t\)& \(e^{rt}(A\text{sin}\,\omega t+B\text{cos}\,\omega t)\)\\
+		\hline
+	\end{tabular}
+	\bigbreak
+	If a term in the initial guess for a particular solution \(x_p\) is not linearly independent from the homogeneous solution, then modify the guess by multiplying by the smallest power of \(t\) that eliminates linear dependence.
+\end{defi}
+\begin{defi}[Beats]
+	A system exhibits the phenomenon of beats when a high frequency is modulated by a low frequency. This occurs when the frequency of the homogeneous equation is different then that of the forcing function. In undamped systems
+	\begin{equation*}
+		x''+\omega_0 t=Acos(\omega t)
+	\end{equation*}
+	Beats occur when \(\omega_0^2\neq\omega\). Otherwise resonance occurs.
+\end{defi}
+\section{Laplace transforms}
+\begin{defi}[Laplace transform]
+	Let \(x=x(t)\) be a function defined on the interval \(0\leq t\leq\infty\). The Laplace transform of \(x(t)\) is the function \(X(s)\) defined by
+	\begin{equation*}
+		X(s)=\int_0^\infty x(t)e^{-st}dt,
+	\end{equation*}
+	Provided the improper integral exists, meaning
+	\begin{equation*}
+		\lim_{b\rightarrow\infty}\int_{0}^{b}x(t)e^{-st}dt\text{ exists.}
+	\end{equation*}
+	Often, the Laplace transform is repersented in function notation,
+	\begin{equation*}
+		\mathcal{L}[x(t)](s)=X(s)\text{ or }\mathcal{L}[x]=X(s).
+	\end{equation*}
+	In this context, \(t,x\) are called time domain variables, and \(s,X\) are called transform domain variables.
+\end{defi}
+\begin{thm}
+	The Laplace transform is a linear operation.
+\end{thm}
+\begin{rema}
+	There are two conditions that guarantee existence of a Laplace transform for a function. first, we require that \(f(t)\) not grow too fast, i.e. if \(M>0\) and \(r\) are constants then
+	\begin{equation*}
+		\lvert f(t)\rvert\leq Me^{rt}
+	\end{equation*}
+	for all \(t>t_0\). Second, we require that \(f(t)\) be piecewise continuous on \(0\leq t<\infty\). This means that on any bounded subinterval of \(0\leq t<\infty\)k we assume that \(f(t)\) has at most a finite number of simple discontinuities, and any point of discontinuity \(f(t)\) has finite left and right limits.
+\end{rema}
+\begin{defi}[Heaviside function]
+	We define the Heaviside function \(H(t)\) by
+	\begin{equation*}
+		H(t)=\begin{cases}0,&t<0\\1,&t\geq 0\end{cases}
+	\end{equation*}
+	Its translation by \(a\) units to the right is \(H(t-a)\), or
+	\begin{equation*}
+		H(t-a)=\begin{cases}0,&t<a\\1,&t\geq a\end{cases}
+	\end{equation*}
+	A useful identity is
+	\begin{equation*}
+		H(t-a)=\mathcal{L}^{-1}\big(\frac{1}{s}e^{-as}\big).
+	\end{equation*}
+\end{defi}
+\begin{defi}[Shift property]
+	The Laplace transform of a function times an exponential, \(f(t)e^{at}\) is given by
+	\begin{equation*}
+		\mathcal{L}[f(t)e^{at}]=F(s-a).
+	\end{equation*}
+\end{defi}
+\begin{defi}[Switching property]
+	The Laplace transform of a function \(f(t)\) that switches on at \(t=a\) is given by
+	\begin{equation*}
+		\mathcal{L}^{-1}[e^{-as}F(s)]=H(t-a)f(t-a).
+	\end{equation*}
+\end{defi}
 \end{document}
