--- a/schoolnotes/optics/optics.tex
+++ b/schoolnotes/optics/optics.tex
@@ -321,4 +321,148 @@ If the angle of incidence is larger than the critical angle, the ray cannot pass
 		M=\frac{\theta'}{\theta}=-\frac{y'/f_2}{y'}{f_1}=\frac{-f_1}{f_2}
 	\end{equation*}
 \end{defi}
+\section{Interference}
+\begin{defi}[Physical optics]
+	Optical effects that depend on the wave nature of light are grouped under the subject of physical optics.
+\end{defi}
+\begin{defi}[Interference]
+	The term interference refers to any situation in which two or more waves overlap in space. When this occurs, the total wave at any point at any instant of time is governed by the principle of superposition.\footnote{Recall the principle of superposition just means adding the instantaneous displacements of each individual wave to find the displacement of the combined wave.}
+\end{defi}
+\begin{defi}[Monochromatic light]
+	Most light in nature is not monochromatic, i.e. it is a mixture of light of different frequencies. Laser light is nearly monochromatic. In this chapter and the next, assume we are working with monochromatic light unless otherwise stated.
+\end{defi}
+\begin{defi}[Coherent light]
+	Two monochromatic sources of the same frequency and constant phase relationship are said to be coherent.\footnote{This does not mean the light waves are in phase with each other.}
+\end{defi}
+\begin{rema}
+	If the wave emitted by two coherent sources are transverse, we will also assume that the waves have the same polarization.
+\end{rema}
+\begin{defi}[Constructive and destructive interference]
+	Let \(r_1\) and \(r_2\) be the distance from the sources \(s_1\) and \(s_2\) to point \(p\) respectively, and let \(m\in\{\mathbb{N, 0}\}\). The sources \(s_1\) and \(s_2\) are coherent and are in phase with each other. Interference is constructive if
+	\begin{equation*}
+		r_2-r_1=m\lambda.
+	\end{equation*}
+	Interference is destructive if
+	\begin{equation*}
+		r_2-r_1=(m+\frac{1}{2})\lambda.
+	\end{equation*}
+	Antinodal curces are where waves interfere constructively. Nodal curves are where waves interfere destructively.
+\end{defi}
+\begin{defi}[Constructive and destructive interference, two slits]
+	The bright regions on the screen occur at angles \(\theta\), where \(\theta\) is the angle between the long path and the normal to the screen, \(d\) is the distance between slits and \(m\in\{\mathbb{N},0\}\), as given by the equation\footnote{The following equations assume both sources have the same maximum electric field magnitude.}
+	\begin{equation*}
+		d\text{sin}\,\theta=m\lambda.
+	\end{equation*}
+	Destructive occurance occurs at angles \(\theta\) for which the following equation holds:
+	\begin{equation*}
+		d\text{sin}\,\theta=(m+\frac{1}{2})\lambda.
+	\end{equation*}
+	Using the constructive interference \(\theta\) relationship, we can find the position of the \(m^{\text{th}}\) bright band for small angles, with \(R\) the distance to the screen by the equation
+	\begin{equation*}
+		y_m=R\frac{m\lambda}{d}.
+	\end{equation*}
+	The distance between adjacent bright bands is inversely proportional to the distance \(d\) between slits.
+\end{defi}
+\begin{defi}[Electric-field amplitude, two-source interference]
+	\,
+	\begin{equation*}
+		E_p=2E\lvert\text{cos}\,\frac{\phi}{2}\rvert.
+	\end{equation*}
+\end{defi}
+\begin{defi}[Intensity, two-source interference]
+	Intensity \(I\) is equal to the average magnitude of the Poynting vector, \(S_av\). Let \(I_0\) be the maximum intensity. The intensity at the point in question is
+	\begin{equation*}
+		I=I_0\text{cos}^2\,\frac{\phi}{2}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Phase difference, two-source interference]
+	\,
+	\begin{equation*}
+		\phi=\frac{2\pi}{\lambda}(r_2-r_1).
+	\end{equation*}
+\end{defi}
+\begin{rema}
+	Interference in thin films occurs because partial refraction of incident light into the film, and subsequent refraction of that light out of the film. The refracted light emerges parallel but out of phase with the reflected light. This means that certain wavelengths of light constructively or destructively interfere with each other, depending on the speed of the wavelength of the light in the refracting material, as well as the thickness of this material. When a light ray is reflected of of an interface with a higher refractive index, the phase shifts by \(\pi\).
+\end{rema}
+\begin{defi}[Constructive/destructive relfection, no phase shift]
+	Constructive reflection occurs at thicknesses \(t\) such that
+	\begin{equation*}
+		2t=m\lambda.
+	\end{equation*}
+	Destructive reflection occurs at thicknesses \(t\) such that
+	\begin{equation*}
+		2t=(m+1/2)\lambda.
+	\end{equation*}
+\end{defi}
+\begin{defi}[Constructive/destructive relfection, half-cycle phase shift]
+	Constructive reflection occurs at thicknesses \(t\) such that
+	\begin{equation*}
+		2t=(m+1/2)\lambda.
+	\end{equation*}
+	Destructive reflection occurs at thicknesses \(t\) such that
+	\begin{equation*}
+		2t=m\lambda.
+	\end{equation*}
+\end{defi}
+\begin{rema}
+	For thick films, there is no definite phase shift so outgoing rays are incoherent, and there is no fixed interference pattern.
+\end{rema}
+\begin{rema}
+	The \(x\) values for which we see destructive interference for films with lower index of refractions are.
+	\begin{equation*}
+		x=\frac{ml\lambda}{2h}.
+	\end{equation*}
+	Light that is in a lower index of refraction material that reflects off of material with a higher index of refraction experiences a \(\pi\) phase shift. Otherwise, there is no phase shift on reflection.
+\end{rema}
+\begin{defi}[Nonreflective and reflective coatings]
+	Both reflective and nonreflective coatings are deposited in a \(\lambda/4\) thickness coating. Nonreflective materials have a lower index of refraction from the material they coat, and reflective coatings have a higher index of refraction from the material they coat.
+\end{defi}
+\section{Diffraction}
+\begin{defi}[Diffraction]
+	The class of effects that occur when light strikes a barrier that has an aperture or an edge are called diffraction.
+\end{defi}
+\begin{defi}[Huygen's principle]
+	We can consider every point of a wave front as a source of secondary wavelets. the position of the wave front at any later time is the envelope of the secondary wavelets at that time.
+\end{defi}
+\begin{defi}[Fresnel and Fraunhofer diffraction]
+	Fresnel, or near field diffraction, occurs when both the point source and the screen are relatively close to the obstacle forming the diffraction patterns. Fraunhofer diffraction occurs when the source, obstacle, and screen are far enough apart that we can consider all lines from the source to the obstacle to be parallel.\footnote{The discussion in this chapter is restricted to Fraunhofer diffraction.}
+\end{defi}
+\begin{rema}
+	There is no fundamental distinction between interference and diffraction.
+\end{rema}
+\begin{defi}[Dark finges, single-slit diffraction]
+	If \(\theta\) is the angle from the center of the slit to the \(m^{th}\)dark fringe on the screen at point \(P\), and \(a\) is the slit width, then\footnote{Because \(\theta\) is very small, to calculate path difference we use right triangle with hypotenuse \(a/2\) normal to the ray originating from the center.}
+	\begin{equation*}
+		\text{sin}\,\theta=\frac{m\lambda}{a}\qquad(m\in\mathbb{Z}\setminus 0)
+	\end{equation*}
+	Because the screen is far away, light from two huygens strips \(\frac{a}{2m}\) always arrive out of phase at point \(P\), because they too have a path difference of \((m-1)+a/2\). Therefore if \(a\text{sin}\,\theta\) is a multiple of \(\lambda/2\), then all rays originating along \(a/2\) have a sister ray which destructively interferes with it. Thus at point \(P\) all light originating from the slit cancels at point \(P\). Because the light wavelength is so small in comparision to the slit width, we can approximate \(\text{sin}\,\theta=\theta\) and use the equation
+	\begin{equation*}
+		\theta=\frac{m\lambda}{a}.
+	\end{equation*}
+	and thus the vertical distance of the \(m^th\) dark band from the center of the pattern \(y_m\) for a screen at distance \(x\) is
+	\begin{equation*}
+		y_m=x\frac{m\lambda}{a}\qquad(\text{for\;}y_m<<x)
+	\end{equation*}
+\end{defi}
+\begin{defi}[Intensity in single-slit diffraction]
+	The intensity \(I\) at point \(p\) can be found from the angle from the center of the slit to \(p\), \(\theta\) as.
+	\begin{equation*}
+		I=I_0\bigg\{\frac{\text{sin}\,[\pi a(\text{sin}\,\theta)/\lambda]}
+		{\pi a(\text{sin}\,\theta)/\lambda}\bigg\}^2
+	\end{equation*}
+	It may be easier to calculate beta first by
+	\begin{equation*}
+		\beta=\frac{2\pi}{\lambda}a\text{sin}\,\theta
+	\end{equation*}
+	And then calculate \(I\) from
+	\begin{equation*}
+		I=I_0\bigg[\frac{\text{sin}(\beta/2)}{\beta/2}\bigg]^2
+	\end{equation*}
+\end{defi}
+\begin{defi}[Intensity of \(m\)\textsuperscript{th} side maximum]
+	\,
+	\begin{equation*}
+		I_m\approx\frac{I_0}{(m+1/2)^2\pi^2}.
+	\end{equation*}
+\end{defi}
 \end{document}
